<resources>
    <string name="app_name">s24.ConnpassClient</string>
    <string name="status_hint">input keyword</string>
    <string name="hint_keywords">keywords</string>
    <string name="date">from</string>
    <string name="or">OR</string>
    <string name="and">AND</string>
    <string name="menu_detail_search">DetailSearch</string>
    <string name="button">search</string>
    <string name="haihunn">_</string>
    <string name="label_date">Data</string>
    <string name="hash_tag">ハッシュタグ</string>
    <string name="label_hash_tag">HashTag</string>
    <string name="event_url">イベントURL</string>
    <string name="label_event_url">EventURL</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="検索">検索</string>
    <string name="北海道.">北海道</string>
    <string name="北海道">北海道</string>
    <string name="東北">東北</string>
    <string name="青森県">青森県</string>
    <string name="岩手県">岩手県</string>
    <string name="宮城県">宮城県</string>
    <string name="秋田県">秋田県</string>
    <string name="山形県">山形県</string>
    <string name="福島県">福島県</string>
    <string name="関東">関東</string>
    <string name="茨木県">茨城県</string>
    <string name="栃木県">栃木県</string>
    <string name="岐阜県">岐阜県</string>
    <string name="東京都">東京都</string>
    <string name="神奈川県">神奈川県</string>
    <string name="富山県">富山県</string>
    <string name="中部">中部</string>
    <string name="新潟県">新潟県</string>
    <string name="群馬県">群馬県</string>
    <string name="埼玉県">埼玉県</string>
    <string name="千葉県">千葉県</string>
    <string name="石川県">石川県</string>
    <string name="福井県">福井県</string>
    <string name="山梨県">山梨県</string>
    <string name="長野県">長野県</string>
    <string name="静岡県">静岡県</string>
    <string name="愛知県">愛知県</string>
    <string name="近畿">近畿</string>
    <string name="三重県">三重県</string>
    <string name="滋賀県">滋賀県</string>
    <string name="京都府">京都府</string>
    <string name="大阪府">大阪府</string>
    <string name="兵庫県">兵庫県</string>
    <string name="和歌山県">和歌山県</string>
    <string name="奈良県">奈良県</string>
    <string name="中国">中国</string>
    <string name="鳥取県">鳥取県</string>
    <string name="島根県">島根県</string>
    <string name="岡山県">岡山県</string>
    <string name="広島県">広島県</string>
    <string name="山口県">山口県</string>
    <string name="四国">四国</string>
    <string name="徳島県">徳島県</string>
    <string name="香川県">香川県</string>
    <string name="愛媛県">愛媛県</string>
    <string name="高知県">高知県</string>
    <string name="九州">九州</string>
    <string name="福岡県">福岡県</string>
    <string name="佐賀県">佐賀県</string>
    <string name="長崎県">長崎県</string>
    <string name="熊本県">熊本県</string>
    <string name="大分県">大分県</string>
    <string name="宮崎県">宮崎県</string>
    <string name="鹿児島県">鹿児島県</string>
    <string name="沖縄県">沖縄県</string>
    <string name="その他">その他</string>
    <string name="オンライン">オンライン</string>
    <string name="error_date">エラー</string>
</resources>